fix(develop): remove scrollbars windows/chrome

--- a/src/app/common/components/ui/data/data.component.scss
+++ b/src/app/common/components/ui/data/data.component.scss
@@ -1,4 +1,8 @@
+@import '../../../../../assets/css/mixins';
+
 :host {
+
+  @include hideScrollBars();
 
   form {
     max-width: 100%;
