--- a/src/app/modules/flow/steps/data/flow-data.component.scss
+++ b/src/app/modules/flow/steps/data/flow-data.component.scss
@@ -1,4 +1,6 @@
+@import "../../../../../assets/css/mixins";
 :host {
   justify-content: start;
+  @include hideScrollBars();
  fiiz-data { }
 }
