--- a/src/assets/css/_tables.scss
+++ b/src/assets/css/_tables.scss
@@ -36,6 +36,8 @@
   &__body {
     overflow-y: scroll;
     height: 100%;
+
+    @include hideScrollBars();
   }
 
   &__row {
